--- a/templates/resume/template4.html
+++ b/templates/resume/template4.html
@@ -1,165 +1,207 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Title</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
   </head>
-<style>
-  .resume{
-    border: 1px solid;
-    
-  }
-</style>
+  <style>
+    .resume {
+      border: 1px solid;
+    }
+  </style>
 
   <body>
-
     <h1>Resume</h1>
-    <button  style="margin-top: 10px;" class="button btn btn-primary" onclick="getPDF()">Generate pdf</button>
+    <button
+      style="margin-top: 10px"
+      class="button btn btn-primary"
+      onclick="getPDF()"
+    >
+      Generate pdf
+    </button>
 
-
-      <div class="container mt-4  ">
-      <div class="resume p-5 ">
-
-          <h1 class= "text-center mt-4"><b>My Resume</b></h1>
-          <hr>
-          <br>
-          <br>
+    <div class="container mt-4">
+      <div class="resume p-5">
+        <h1 class="text-center mt-4"><b>My Resume</b></h1>
+        <hr />
+        <br />
+        <br />
         <div class="row center">
-            <u><h5>Name</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <u><h5> {{resume.resumeuserdetails_set.all.first.first_name}}  {{resume.resumeuserdetails_set.all.first.last_name}}</h5></u>
-        </div>
-      
-        <div class="row center">
-            <u><h5>Email</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <u><h5><a href="#">{{resume.resumeuserdetails_set.all.first.email}}</a></h5></u>
-        </div>
-        
-        <div class="row center">
-            <u><h5>Address</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <u><h5> {{resume.resumeuserdetails_set.all.first.address}}</h5></u>
-        </div>
-        <hr>
-        
-        <div class="row center">
-        <h4 class= ""><b>Objective : -</b></h4>     
-
-            <p style=" margin-left: 150px;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
-            </p>
+          <u><h5>Name</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+          <u
+            ><h5>
+              {{resume.resumeuserdetails_set.all.first.first_name}}
+              {{resume.resumeuserdetails_set.all.first.last_name}}
+            </h5></u
+          >
         </div>
 
-        <hr>
-      <div class="row">
-        <h4 class= ""><b>Education : -</b></h4>    
+        <div class="row center">
+          <u><h5>Email</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+          <u
+            ><h5>
+              <a href="#">{{resume.resumeuserdetails_set.all.first.email}}</a>
+            </h5></u
+          >
+        </div>
+
+        <div class="row center">
+          <u><h5>Address</h5></u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+          <u><h5>{{resume.resumeuserdetails_set.all.first.address}}</h5></u>
+        </div>
+        <hr />
+
+        <div class="row center">
+          <h4 class=""><b>Objective : -</b></h4>
+
+          <p style="margin-left: 150px">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+            nonummy nibh euismod tincidunt ut laoreet dolore. Lorem ipsum dolor
+            sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+            euismod tincidunt ut laoreet dolore. Lorem ipsum dolor sit amet,
+            consectetuer adipiscing elit, sed diam nonummy nibh euismod
+            tincidunt ut laoreet dolore.
+          </p>
+        </div>
+
+        <hr />
+        <div class="row">
+          <h4 class=""><b>Education : -</b></h4>
           <table class="table">
-              <thead>
-                  <tr>
-                    <th> qualifications </th>
-                      <th>passing year</th>
-                      <th>Grade/ Percentage </th>
-                      <th> college/Board</th>
-
-                  </tr>
-              </thead>
-              <tbody>
-                {% for education in resume.education_set.all %}
-                  <tr>
-                      <td scope="row">{{education.qualification_name}}</td>
-                      <td> &nbsp {{education.year_of_passing}} </td>
-                      <td>{{education.percentage_or_grade}}</td>
-                      <td>{{education.university}}</td>
-                  </tr>
-                  {% endfor %}
-              
-
-              </tbody>
+            <thead>
+              <tr>
+                <th>qualifications</th>
+                <th>passing year</th>
+                <th>Grade/ Percentage</th>
+                <th>college/Board</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for education in resume.education_set.all %}
+              <tr>
+                <td scope="row">{{education.qualification_name}}</td>
+                <td>&nbsp {{education.year_of_passing}}</td>
+                <td>{{education.percentage_or_grade}}</td>
+                <td>{{education.university}}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
           </table>
-     </div>
-     <h3 class= ""><b>Hobbies : -</b></h3> 
+        </div>
+        <h3 class=""><b>Hobbies : -</b></h3>
 
-      <div class="row">
-        <br>
-        <ul style=" margin-left: 150px;">
-          {% for hobbie in resume.hobbies_set.all %}
-         <li>{{hobbie.hobbies}}</li>
-          {% endfor %}
+        <div class="row">
+          <br />
+          <ul style="margin-left: 150px">
+            {% for hobbie in resume.hobbies_set.all %}
+            <li>{{hobbie.hobbies}}</li>
+            {% endfor %}
+          </ul>
+        </div>
+        <div class="row">
+          <h4 class=""><b>Deceleration : -</b></h4>
 
-        </ul>
-
+          <p style="margin-left: 150px">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+            nonummy nibh euismod tincidunt ut laoreet dolore. Lorem ipsum dolor
+            sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+            euismod tincidunt ut laoreet dolore. Lorem ipsum dolor sit amet,
+            consectetuer adipiscing elit, sed diam nonummy nibh euismod
+            tincidunt ut laoreet dolore.
+          </p>
+        </div>
       </div>
-      <div class="row">
-        <h4 class= ""><b>Deceleration : -</b></h4>     
+    </div>
 
-        <p style=" margin-left: 150px;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
-        </p>
-      </div>
-     </div></div>
-    
     <!-- Optional JavaScript -->
-   
 
-    
     <script type="text/javascript">
-      function Copy() 
-      {
-          var Url = document.getElementById("paste-box");
-          Url.value = window.location.href;
-          Url.focus();
-          Url.select();  
-          document.execCommand("Copy");
+      function Copy() {
+        var Url = document.getElementById("paste-box");
+        Url.value = window.location.href;
+        Url.focus();
+        Url.select();
+        document.execCommand("Copy");
       }
+    </script>
 
+    <script type="text/javascript">
+      function getPDF() {
+        var HTML_Width = $(".container").width();
+        var HTML_Height = $(".container").height();
+        var margin = 20;
+        var PDF_Width = HTML_Width + margin * 2;
+        var PDF_Height = PDF_Width * 1.5 + margin * 2;
+        var canvas_image_width = HTML_Width;
+        var canvas_image_height = HTML_Height;
 
+        var totalPDFPages = Math.ceil(HTML_Height / PDF_Height) - 1;
 
-</script>
+        html2canvas($(".container")[0], { allowTaint: true }).then(function (
+          canvas
+        ) {
+          canvas.getContext("2d");
 
+          console.log(canvas.height + "  " + canvas.width);
 
-<script type="text/javascript">
-  function getPDF(){
+          var imgData = canvas.toDataURL("image/jpeg", 1.0);
+          var pdf = new jsPDF("p", "pt", [PDF_Width, PDF_Height]);
+          pdf.addImage(
+            imgData,
+            "JPG",
+            margin,
+            margin,
+            canvas_image_width,
+            canvas_image_height
+          );
 
-var HTML_Width = $(".container").width();
-var HTML_Height = $(".container").height();
-var margin = 20;
-var PDF_Width = HTML_Width+(margin*2);
-var PDF_Height = (PDF_Width*1.5)+(margin*2);
-var canvas_image_width = HTML_Width;
-var canvas_image_height = HTML_Height;
+          for (var i = 1; i <= totalPDFPages; i++) {
+            pdf.addPage(PDF_Width, PDF_Height);
+            pdf.addImage(
+              imgData,
+              "JPG",
+              top_left_margin,
+              -(PDF_Height * i) + margin * 4,
+              canvas_image_width,
+              canvas_image_height
+            );
+          }
 
-var totalPDFPages = Math.ceil(HTML_Height/PDF_Height)-1;
-
-
-html2canvas($(".container")[0],{allowTaint:true}).then(function(canvas) {
-  canvas.getContext('2d');
-  
-  console.log(canvas.height+"  "+canvas.width);
-  
-  
-  var imgData = canvas.toDataURL("image/jpeg", 1.0);
-  var pdf = new jsPDF('p', 'pt',  [PDF_Width, PDF_Height]);
-    pdf.addImage(imgData, 'JPG', margin, margin,canvas_image_width,canvas_image_height);
-  
-  
-  for (var i = 1; i <= totalPDFPages; i++) { 
-    pdf.addPage(PDF_Width, PDF_Height);
-    pdf.addImage(imgData, 'JPG', top_left_margin, -(PDF_Height*i)+(margin*4),canvas_image_width,canvas_image_height);
-  }
-  
-    pdf.save("HTML-Document.pdf");
-    });
-};  
-  </script>
+          pdf.save("HTML-Document.pdf");
+        });
+      }
+    </script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
